# project-man

./: CLAUDE.md  CONTRIBUTING.md  Cargo.toml  DESIGN.md  README.md  dev-setup.sh  install.sh
.github/workflows/: release.yml
scripts/: p  p-function.sh  quick-install.sh  release.sh  shell-integration.sh
src/: cli.rs  error.rs  main.rs
src/commands/: add.rs  config.rs  go.rs  grep.rs  init.rs  list.rs  migrate.rs  mod.rs  remove.rs  status.rs  sync.rs
src/config/: global.rs  mod.rs  workspace.rs
src/git/: mod.rs
src/search/: mod.rs
