[package]
name = "p"
version = "0.1.0"
edition = "2021"
description = "Project Man - A CLI tool for managing multiple code repositories"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"
repository = "https://github.com/your-username/project-man"

[[bin]]
name = "p-bin"
path = "src/main.rs"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.8"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5.0"
anyhow = "1.0"
thiserror = "1.0"
fuzzy-matcher = "0.3"
crossterm = "0.27"
url = "2.4"
regex = "1.10"
tokio = { version = "1.0", features = ["full"] }
which = "6.0"
